Fix search bar alignment in mobile nav menu

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,8 @@ textarea {
   display: inline-block;
   padding-top: 8px;
   width: 192px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media only screen and (max-width: 448px) {
